# EnemyNationsRevival

./: .gitignore  readme.adoc
Include/: AFXMT.H
Include/include/: DSOUND.H
Include/mfc/include/: AFX.H  AFX.INL  AFXADV.H  AFXCMN.H  AFXCMN.INL  AFXCOLL.H  AFXCOLL.INL  AFXCOM_.H  AFXCONV.H  AFXCTL.H  AFXCTL.INL  AFXCTL.RC  AFXCVIEW.H  AFXCVIEW.INL  AFXDAO.H  AFXDAO.INL  AFXDB.H  AFXDB.INL  AFXDB.RC  AFXDB_.H  AFXDD_.H  AFXDISP.H  AFXDLGS.H  AFXDLGS.INL  AFXDLLX.H  AFXDLL_.H  AFXDOCOB.H  AFXEXT.H  AFXEXT.INL  AFXINET.H  AFXINET.INL  AFXISAPI.H  AFXISAPI.INL  AFXISAPI.RC  AFXMT.INL  AFXODLGS.H  AFXOLE.H  AFXOLE.INL  AFXOLECL.RC  AFXOLESV.RC  (+18 more)
Include/mfc/include/l.chs/: AFXCTL.RC  AFXPRINT.RC  AFXRES.RC
Include/mfc/include/l.deu/: AFXCTL.RC  AFXPRINT.RC  AFXRES.RC
Include/mfc/include/l.esp/: AFXCTL.RC  AFXPRINT.RC  AFXRES.RC
Include/mfc/include/l.fra/: AFXCTL.RC  AFXPRINT.RC  AFXRES.RC
Include/mfc/include/l.ita/: AFXCTL.RC  AFXPRINT.RC  AFXRES.RC
Include/mfc/include/l.kor/: AFXCTL.RC  AFXPRINT.RC  AFXRES.RC
Include/mfc/src/: AFXABORT.CPP  AFXASERT.CPP  AFXCRIT.CPP  AFXDBCS.CPP  AFXIMPL.H  AFXINL1.CPP  AFXINL2.CPP  AFXINL3.CPP  AFXMEM.CPP  AFXSTATE.CPP  AFXTLS.CPP  AFXTRACE.CPP  APP3D.CPP  APP3DS.CPP  APPCORE.CPP  APPDLG.CPP  APPGRAY.CPP  APPHELP.CPP  APPHELPX.CPP  APPINIT.CPP  APPMODUL.CPP  APPPRNT.CPP  APPTERM.CPP  APPUI.CPP  APPUI2.CPP  APPUI3.CPP  ARCCORE.CPP  ARCEX.CPP  ARCOBJ.CPP  ARCSTRM.CPP  ARRAY_B.CPP  ARRAY_D.CPP  ARRAY_O.CPP  ARRAY_P.CPP  ARRAY_S.CPP  ARRAY_U.CPP  ARRAY_W.CPP  AUXDATA.CPP  BARCORE.CPP  BARDLG.CPP  (+219 more)
Include/mfc/src/intel/: MFC42.DEF  MFC42.PRF  MFC42D.DEF  MFC42U.DEF  MFC42U.PRF  MFC42UD.DEF  MFCD42UD.DEF  MFCN42D.DEF  MFCN42UD.DEF  MFCO42D.DEF  MFCO42UD.DEF
compress/: MAIN.CPP
enations/hlp/: Thumbs.db
enations/src/: ADVDLG.H  CAIMAP.CPP  CAIOPFOR.CPP  CAITMGR.CPP  CAIUNIT.CPP  Caidata.cpp  Caigmgr.cpp  Cairoute.cpp  Chproute.cpp  Citizen.cpp  DXFER.H  Dxfer.cpp  IPCCHAT.CPP  Mainloop.cpp  NETAPI.H  NETCMD.H  Player.cpp  STDAFX.H  Vehmove.cpp  area.cpp  base.h  bridge.cpp  bridge.h  building.inl  enations.vcp  lastplnt.cpp  lastplnt.h  netcmd.cpp  research.cpp  scenario.cpp  sprite.cpp  sprtinit.cpp  terrain.cpp  toolbar.cpp  unit_wnd.cpp  vehicle.cpp  wrldinit.cpp
enations/src/lang/: ENLang7.rc
enations_latest/hlp/: Thumbs.db
enations_latest/src/: ADVANCED.CPP  CMakeLists.txt  CdLoc.h  DlgMsg.h  Lastplnt.aps  PlyrList.cpp  SetupVars.bat  VPXFER.CPP  VPXFER.H  advanced.cpp  ai.cpp  area.cpp  area.h  base.h  bitmaps.h  bmbutton.cpp  bmbutton.h  cai.h  caidata.cpp  caidata.hpp  caigmgr.cpp  caigoal.cpp  caiinit.cpp  caimaput.cpp  caimaput.hpp  caimgr.cpp  caiopfor.cpp  cairoute.cpp  caisavld.cpp  caistart.cpp  caitask.cpp  caiunit.cpp  caiunit.hpp  cpathmap.cpp  cpathmgr.cpp  cpathmgr.h  creatmul.cpp  enations.mak  enations.vcp  enations.vcxproj  (+55 more)
enations_latest/src/WinDebug/: vc141.idb
makeriff/: MAKERIFF.CPP  RIFFFILE.CPP  RIFFFILE.H
sprite/: COMMON.H  HUFFMANC.CPP  IMAGE.CPP  MINVARQ.CPP  MINVARQ.H  SPRCNVRT.CPP  SPRITE.CPP  STDAFX.H  TEMP.CPP  V.CPP
src/cdf/: CDF.CPP  CMakeLists.txt  cdf.cpp
tools/compress/: CMakeLists.txt
tools/sprite/: CMakeLists.txt
tools/vdmplay/: CMakeLists - Old.txt  CMakeLists - not as old.txt  CMakeLists.txt  Vdmplay.aps  vpengine.h  vplist.h
tools/vdmplay/ISERVE/: CMakeLists.txt  ISERVDLG.H  ISERVE.APS
tools/vdmplay/VDMPLUI/: CMakeLists.txt  VDMPLUI.APS
tools/vdmplay/VPDIAG/: CMakeLists.txt  NBDLG.H  NET.CPP
vdmplay/: ADVDLG.CPP  ASTRING.H  ASTRLIST.H  BASE.H  COMMNET.CPP  COMMNET.H  COMMPORT.H  COMSTATD.CPP  COMSTATD.H  COREERR.CPP  CSTRING.CPP  DATAGRAM.H  DATALINK.CPP  DATALINK.H  DATALOG.CPP  DATALOG.H  DEFMISC.H  DIALER.CPP  DIALER.H  DLINKI.H  DPENGINE.CPP  DPENGINE.H  DPNET.CPP  DPNET.H  ECBPOST.ASM  FRCODER.CPP  FRCODER.H  GENERIC.H  IPX16NET.CPP  IPX16NET.H  IPX16STB.CPP  IPX16STB.H  ISLIST.CPP  ISLISTIT.CPP  MAINFRM.CPP  MAINFRM.H  MDMDRVR.CPP  MDMDRVR.H  MDMNET.CPP  MDMNET.H  (+53 more)
vdmplay/ISERVE/: ISERVDLG.CPP
vdmplay/ISERVE/WINDEBUG/: ISERVE.RES  VC40.IDB
vdmplay/ISERVE/WINREL/: ISERVE.RES
vdmplay/UT/WINDEBUG/: VC40.IDB  VDMPLAY.RES  VER32.RES
vdmplay/UT/WINREL/: VDMPLAY.res  VER32.RES
vdmplay/VPDEMO/WINDEBUG/: VC40.IDB  VPDEMO.RES  VPDEMO.VCP  VPDEMODS.ERR  VPDEMODS.EVT  VPDEMODS.MDP  VPDEMODS.SUP
vdmplay/VPDEMO/WINREL/: VPDEMO.RES
vdmplay/VPDIAG/: NBDLG.CPP
vdmplay/VPTEST/: TIPX16.CPP
vdmplay/WINREL/: VDMPLAY.res  vdmplay.exp  vdmplay.org
vdmplay/WinDebug/: TWSKNET.LIB  VDMPLAY.res  vc40.idb  vdmplay.exp  vdmplay.lib
windward/include/: ACMUTIL.H  BLT.H  BPECODEC.H  CODEC.H  FIXPOINT.H  FLCANIM.H  FLCCTRL.H  HUFFMANC.H  INIT.H  LZSSCODE.H  LZWCODEC.H  MMIO.H  RAND.H  SCANLIST.H  THIELEN.INL  THREADS.H  Thielen.h  WINDWARD.H  WINDWARD.INL  _ERROR.H  _HELP.H  _WINDWRD.H  _debug.h  _msgs.h  btree.h  cache.h  datafile.h  dib.h  dibwnd.h  dlgmsg.h  games.h  logging.h  mmio.inl  music.h  ptr.h  subclass.h  wndbase.h
windward/lib/: Bpecodec.cpp  DAVIDINL.CPP  Datafile.cpp  DlgMsg.cpp  FIXPOINT.CPP  LZWCODEC.CPP  MSG_BOX.CPP  RAND.CPP  STREXT.CPP  dib.cpp  subclass.cpp  wind22.mak  wndbase.cpp
windward/src/: Acmutil.cpp  BTREE.CPP  DIRCORE.CPP  FLCCTRL.CPP  GLOBAL.CPP  HUFFMANC.CPP  INIT.CPP  LZSSCODE.CPP  MMIO.CPP  Music.cpp  SCANLIST.CPP  STDAFX.CPP  STDAFX.H  Threads.cpp  Wind40.mdp  apppalet.cpp  blt.cpp  cache.cpp  codec.cpp  dibwnd.cpp  logging.CPP  wind22.mak  wind22.vcp
windward/wind22/: CMakeLists.txt  dibwnd.cpp
windward/wind22/include/: dib.h  dibwnd.h  flcanim.h  windward.h
windward/wind22/src/: blt.cpp  dib.cpp  dircore.cpp  flcctrl.cpp  music.cpp  subclass.cpp  threads.cpp  wndbase.cpp
